--- a/WebUI/src/assets/css/compontents.css
+++ b/WebUI/src/assets/css/compontents.css
@@ -173,7 +173,7 @@
     align-items: flex-start;
     gap: 10px;
     border-radius: 5px;
-    background: #05010f;
+    background: #05010fa8;
     overflow: hidden;
     position: relative;
 
