Add buttons to control font size in chat ui (#10)

--- a/WebUI/src/assets/css/svg.css
+++ b/WebUI/src/assets/css/svg.css
@@ -131,8 +131,13 @@
 .i-transfer {
   --svg: url("@/assets/svg/transfer.svg");
 }
+
 .i-zoom-in {
   --svg: url("@/assets/svg/zoom-in.svg");
+}
+
+.i-zoom-out {
+  --svg: url("@/assets/svg/zoom-out.svg");
 }
 
 .i-clear {
