--- a/WebUI/src/assets/css/theme.css
+++ b/WebUI/src/assets/css/theme.css
@@ -136,7 +136,7 @@ textarea {
   background: linear-gradient(to bottom, #001f5c, #003b8e);
   position: relative;
   overflow: hidden;
-  perspective: 1000px;
+  perspective: 80vh;
 }
 
 .lnl-bottom-grid {
@@ -200,6 +200,6 @@ position: absolute;
   width: 100%;
   height: 100%;
   background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 65 65" xmlns="http://www.w3.org/2000/svg"><rect x="0" y="0" width="14" height="14" style="fill: hsl(209, 58%, 70%);"/></svg>');
-  background-size: 45px 45px;
+  background-size: 40px 40px;
   opacity: 0.3;
 }
