--- a/WebUI/src/assets/css/main.css
+++ b/WebUI/src/assets/css/main.css
@@ -332,12 +332,11 @@ textarea {
   z-index: 99;
 
   .panel-tab {
+    padding: 3px;
     width: 110px;
-    height: 30px;
     font-size: 14px;
     border-radius: 8px;
     border: 1px solid rgba(255, 255, 255, 0.2);
-    line-height: 30px;
 
     &.active {
       background-color: #26272c;
