added warning-triangle-icon for high-vram-warning
Signed-off-by: julianbollig <julian.bollig@tngtech.com>

--- a/WebUI/src/assets/css/svg.css
+++ b/WebUI/src/assets/css/svg.css
@@ -170,3 +170,7 @@
 .i-fullscreen-exit {
   --svg: url('@/assets/svg/fullscreen-exit.svg');
 }
+
+.i-warning-triangle {
+  --svg: url('@/assets/svg/warning-triangle.svg');
+}
