#58 - fix info table for ComfyUi
Signed-off-by: julianbollig <julian.bollig@tngtech.com>

--- a/WebUI/src/assets/css/main.css
+++ b/WebUI/src/assets/css/main.css
@@ -101,6 +101,13 @@ textarea {
     overflow-y: auto;
   }
 }
+
+.info-params-image {
+  max-width: 250px;
+  margin: 10px;
+  border: 1px solid white;
+}
+
 .enhance-content {
   display: flex;
   align-items: center;
