--- a/WebUI/src/assets/css/main.css
+++ b/WebUI/src/assets/css/main.css
@@ -155,8 +155,10 @@ textarea {
 .image-preview-panel {
   width: 129px;
   height: 100%;
+  max-height: 550px;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
   padding: 8px;
   gap: 14px;
   background-color: var(--color-image-bg);
