--- a/WebUI/src/assets/css/main.css
+++ b/WebUI/src/assets/css/main.css
@@ -153,9 +153,8 @@ textarea {
 }
 
 .image-preview-panel {
-  width: 129px;
-  height: 100%;
-  max-height: 550px;
+  width: 140px;
+  height: 560px;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
