--- a/WebUI/src/assets/css/main.css
+++ b/WebUI/src/assets/css/main.css
@@ -154,7 +154,7 @@ textarea {
 
 .image-preview-panel {
   width: 140px;
-  height: 560px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
