feat: Finish RAG UI and clean up backends
Signed-off-by: Markus Schuettler

--- a/WebUI/src/assets/css/svg.css
+++ b/WebUI/src/assets/css/svg.css
@@ -182,3 +182,7 @@
 .i-warning-triangle {
   --svg: url('@/assets/svg/warning-triangle.svg');
 }
+
+.i-rag {
+  --svg: url('@/assets/svg/rag-on.svg');
+}
