--- a/WebUI/src/assets/css/index.css
+++ b/WebUI/src/assets/css/index.css
@@ -9,67 +9,48 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-
-    --ring: 0 0% 3.9%;
-
+    --background: 280 50% 5%;
+    --foreground: 280 5% 90%;
+    --card: 280 50% 0%;
+    --card-foreground: 280 5% 90%;
+    --popover: 280 50% 5%;
+    --popover-foreground: 280 5% 90%;
+    --primary: 280 98.4% 50.6%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 280 30% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 242 30% 15%;
+    --muted-foreground: 280 5% 60%;
+    --accent: 242 30% 15%;
+    --accent-foreground: 280 5% 90%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 280 5% 90%;
+    --border: 280 30% 18%;
+    --input: 280 30% 18%;
+    --ring: 280 98.4% 50.6%;
     --radius: 0.5rem;
   }
-
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-
-    --ring: 0 0% 83.1%;
+    --background: 280 50% 5%;
+    --foreground: 280 5% 90%;
+    --card: 280 50% 0%;
+    --card-foreground: 280 5% 90%;
+    --popover: 280 50% 5%;
+    --popover-foreground: 280 5% 90%;
+    --primary: 280 98.4% 50.6%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 280 30% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 242 30% 15%;
+    --muted-foreground: 280 5% 60%;
+    --accent: 242 30% 15%;
+    --accent-foreground: 280 5% 90%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 280 5% 90%;
+    --border: 280 30% 18%;
+    --input: 280 30% 18%;
+    --ring: 280 98.4% 50.6%;
+    --radius: 0.5rem;
   }
 }
 
