--- a/WebUI/src/assets/css/main.css
+++ b/WebUI/src/assets/css/main.css
@@ -414,3 +414,647 @@ footer {
   word-spacing: 2px;
   overflow-wrap: anywhere;
 }
+
+.demo-mode-overlay-content {
+  border: 2px solid #00bfff;
+  z-index: 100;
+  pointer-events: none;
+  border-radius: 10.5px;
+}
+
+.demo-mode-image-content {
+  border: 2px solid #00bfff;
+  z-index: 100;
+  pointer-events: none;
+  padding: 24px;
+  border-radius: 8px;
+  position: relative;
+}
+
+.demo-mode-answer-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+
+  .fade-enter-active,
+  .fade-leave-active {
+    transition: opacity 0.75s ease;
+  }
+
+  .fade-enter-from,
+  .fade-leave-to {
+    opacity: 0;
+  }
+
+  .fade-enter-to,
+  .fade-leave-from {
+    opacity: 1;
+  }
+
+  .got-it-btn {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .center-popup {
+    position: absolute;
+    top: 26vh;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 50, 0.85);
+    border: 2px solid #00bfff;
+    border-radius: 10px;
+    padding: 16px 20px;
+    color: white;
+    width: 41.458vw;
+    height: 9.667vh;
+    text-align: center;
+  }
+
+  .tooltip-wrapper {
+    position: absolute;
+    bottom: 17.635vw;
+    left: 3.646vw;
+  }
+
+  .tooltip-box {
+    background: #0A0622;
+    color: white;
+    border: 1.5px solid #00C4FA;
+    border-radius: 12px;
+    padding: 16px 20px;
+    width: 26.51vw;
+    height: 24.59vh;
+    font-family: 'Segoe UI', sans-serif;
+    position: relative;
+  }
+
+  .content-tooltip {
+    margin-top: 8px;
+  }
+
+  .tooltip-row {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 12px;
+  }
+
+  .tooltip-circle {
+    width: 22.88px;
+    height: 22.88px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1.5px solid #00C4FA;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+    flex-shrink: 0;
+  }
+
+  .tooltip-button {
+    background: transparent;
+    border: none;
+    color: #00C4FA;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 8px;
+    float: right;
+  }
+
+  .tooltip-box::after {
+    content: "";
+    position: absolute;
+    bottom: -12px;
+    left: 40px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 12px solid #0d0a2b;
+    z-index: 2;
+  }
+
+  .tooltip-box::before {
+    content: "";
+    position: absolute;
+    bottom: -14px;
+    left: 39px;
+    width: 0;
+    height: 0;
+    border-left: 11px solid transparent;
+    border-right: 11px solid transparent;
+    border-top: 14px solid #00bfff;
+    z-index: 1;
+  }
+}
+
+.demo-mode-enhance-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+  
+  .got-it-btn {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .overlay-textbox {
+    border: 1.5px solid #00C4FA;
+    z-index: 9;
+    pointer-events: none;
+  }
+
+  .center-popup {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #0A0622;
+    border: 1.5px solid #00C4FA;
+    border-radius: 10px;
+    padding: 16px 20px;
+    color: white;
+    width: 41.458vw;
+    height: 9.556vh;
+    text-align: center;
+    font-size: 18px;
+  }
+
+  .tooltip-wrapper {
+    position: absolute;
+    bottom: 29.547vh;
+    left: 3.646vw;
+  }
+
+  .tooltip-box {
+    background: #0A0622;
+    color: white;
+    border: 1.5px solid #00C4FA;
+    border-radius: 12px;
+    padding: 16px 20px;
+    width: 26.51vw;
+    height: 25.59vh;
+    font-family: 'IntelOne';
+    font-size: 16.5px;
+    position: relative;
+  }
+
+  .tooltip-row {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 12px;
+  }
+
+  .tooltip-circle {
+    width: 22.88px;
+    height: 22.88px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1.5px solid #00C4FA;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+    flex-shrink: 0;
+  }
+
+  .tooltip-button {
+    background: transparent;
+    border: none;
+    color: #00C4FA;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 8px;
+    float: right;
+  }
+
+  .tooltip-box::after {
+    content: "";
+    position: absolute;
+    bottom: -12px;
+    left: 40px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 12px solid #0d0a2b;
+    z-index: 2;
+  }
+
+  .tooltip-box::before {
+    content: "";
+    position: absolute;
+    bottom: -14px;
+    left: 39px;
+    width: 0;
+    height: 0;
+    border-left: 11px solid transparent;
+    border-right: 11px solid transparent;
+    border-top: 14px solid #00bfff;
+    z-index: 1;
+  }
+}
+
+.demo-mode-create-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .create-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .popup-box {
+    border: 1.5px solid #00C4FA;
+    background: #0A0622;
+    color: #fff;
+    border-radius: 10px;
+    padding: 16px 20px;
+    font-size: 18px;
+    width: 41.458vw;
+    height: 9.556vh;
+    position: absolute;
+  }
+
+  .prompt-popup-box {
+    border: 1.5px solid #00C4FA;
+    background: #0A0622;
+    color: #fff;
+    border-radius: 10px;
+    font-size: 16.5px;
+    font-weight: 400;
+    width: 26.493vw;
+    height: 20.257vh;
+    position: absolute;
+    padding: 23px 18px 23px 18px;
+  }
+
+  .center-box {
+    top: 26vh;
+  }
+
+  .got-it-btn {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .bottom-left-box {
+    bottom: 29.16vh;
+    left: 3.49vw;
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .step {
+    width: 22.88px;
+    height: 22.88px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1.5px solid #00C4FA;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+    flex-shrink: 0;
+  }
+
+  .content {
+    flex: 1;
+  }
+
+  .example {
+    font-style: IntelOne Display;
+    margin-top: 4px;
+    font-weight: 400;
+  }
+
+  .action {
+    margin-top: 8px;
+    font-size: 18px;
+    font-weight: 500;
+    background: none;
+    border: none;
+    color: #3BC8FF;
+    font-weight: bold;
+    cursor: pointer;
+    justify-content: flex-end;
+  }
+
+  .prompt-popup-box::after {
+    content: "";
+    position: absolute;
+    bottom: -12px;
+    left: 40px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 12px solid #0d0a2b;
+    z-index: 2;
+  }
+
+  .prompt-popup-box::before {
+    content: "";
+    position: absolute;
+    bottom: -14px;
+    left: 39px;
+    width: 0;
+    height: 0;
+    border-left: 11px solid transparent;
+    border-right: 11px solid transparent;
+    border-top: 14px solid #00bfff;
+    z-index: 1;
+  }
+}
+
+.demo-mode-Image-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+
+  .fade-enter-active,
+  .fade-leave-active {
+    transition: opacity 0.75s ease;
+  }
+
+  .fade-enter-from,
+  .fade-leave-to {
+    opacity: 0;
+  }
+
+  .fade-enter-to,
+  .fade-leave-from {
+    opacity: 1;
+  }
+
+  .got-it-btn {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .tooltip-wrapper {
+    position: absolute;
+    bottom: 43.743vh;
+    left: 3.646vw;
+  }
+
+  .tooltip-box {
+    background: #0A0622;
+    color: white;
+    border: 1.5px solid #00C4FA;
+    border-radius: 12px;
+    padding: 16px 20px;
+    width: 26.51vw;
+    height: 24.59vh;
+    font-family: 'IntelOne';
+    font-size: 16.5px;
+    position: relative;
+  }
+
+  .tooltip-row {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 12px;
+  }
+
+  .tooltip-circle {
+    width: 22.88px;
+    height: 22.88px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1.5px solid #00C4FA;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+    flex-shrink: 0;
+  }
+
+  .tooltip-button {
+    background: transparent;
+    border: none;
+    color: #00C4FA;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 8px;
+    float: right;
+  }
+
+  .tooltip-box::after {
+    content: "";
+    position: absolute;
+    bottom: -12px;
+    left: 40px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 12px solid #0d0a2b;
+    z-index: 2;
+  }
+
+  .tooltip-box::before {
+    content: "";
+    position: absolute;
+    bottom: -14px;
+    left: 39px;
+    width: 0;
+    height: 0;
+    border-left: 11px solid transparent;
+    border-right: 11px solid transparent;
+    border-top: 14px solid #00bfff;
+    z-index: 1;
+  }
+}
+
+.demo-mode-outpaint-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+
+  .got-it-btn {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .tooltip-wrapper {
+    position: absolute;
+    bottom: 43.864vh;
+    left: 3.646vw;
+  }
+
+  .tooltip-box {
+    background: #0A0622;
+    color: white;
+    border: 1.5px solid #00C4FA;
+    border-radius: 12px;
+    padding: 16px 20px;
+    width: 26.51vw;
+    height: 26.583vh;
+    font-family: 'IntelOne';
+    font-size: 16.5px;
+    position: relative;
+    line-height: 100%;
+  }
+
+  .tooltip-row {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 12px;
+  }
+
+  .tooltip-circle {
+    width: 22.88px;
+    height: 22.88px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1.5px solid #00C4FA;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+    flex-shrink: 0;
+  }
+
+  .tooltip-button {
+    background: transparent;
+    border: none;
+    color: #00C4FA;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 8px;
+    float: right;
+  }
+
+  .tooltip-box::after {
+    content: "";
+    position: absolute;
+    bottom: -12px;
+    left: 40px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 12px solid #0d0a2b;
+    z-index: 2;
+  }
+
+  .tooltip-box::before {
+    content: "";
+    position: absolute;
+    bottom: -14px;
+    left: 39px;
+    width: 0;
+    height: 0;
+    border-left: 11px solid transparent;
+    border-right: 11px solid transparent;
+    border-top: 14px solid #00bfff;
+    z-index: 1;
+  }
+}
+
+.demo-mode-outpaint-content {
+  border: 2px solid #00bfff;
+  z-index: 100;
+  pointer-events: none;
+  padding: 10px;
+  border-radius: 10.5px;
+  position: relative;
+}
+
+.demo-mode-denoise-content {
+  border: 2px solid #00bfff;
+  z-index: 100;
+  pointer-events: none;
+  padding: 40px;
+  border-radius: 10.5px;
+  position: relative;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.75s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.fade-enter-to,
+.fade-leave-from {
+  opacity: 1;
+}
+.upscale-content { 
+    position: relative;
+    height: 100%;
+    &::after {
+      position: absolute;
+      right: -25px;
+      top: 0px;
+      height: 100%;
+      content: '';
+      border-right: 1px solid var(--color-spilter);    
+  }
+}
+
+.help-button {
+  position: absolute;
+  top: 12px;
+  right: 20px;
+  background-color: #01AEF2;
+  color: #fff;
+  font-weight: 400;
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  font-size: 0.8vw;
+  width: 7.042vw;
+  height: 3.519vh;
+}
+
+.hide-help-button {
+  display: none;
+  pointer-events: none;
+}
+
+/* .main-content */
