resolved PR review comments and internal QA bugs

--- a/WebUI/src/assets/css/index.css
+++ b/WebUI/src/assets/css/index.css
@@ -3,6 +3,7 @@
 @import 'tailwindcss/utilities';
 @import './theme.css';
 @import './main.css';
+@import './demo-mode.css';
 @import './pc.css';
 @import './compontents.css';
 @import './svg.css';
