--- a/WebUI/src/assets/css/demo-mode.css
+++ b/WebUI/src/assets/css/demo-mode.css
@@ -766,3 +766,16 @@
 .demo-step-number-answer {
   transform: translate(-30%, -30%) !important;
 }
+
+.demo-variation-splitter {
+    position: relative;
+    height: 100%;
+    &::after {
+      position: absolute;
+      right: -25px;
+      top: 0px;
+      height: 100%;
+      content: '';
+      border-right: 1px solid var(--color-spilter);
+    }
+}
