--- a/WebUI/src/assets/css/demo-mode.css
+++ b/WebUI/src/assets/css/demo-mode.css
@@ -768,8 +768,8 @@
       position: absolute;
       right: -25px;
       top: 0px;
-      height: 100%;
+      height: 108%;
       content: '';
-      border-right: 1px solid var(--color-spilter);
+      border-right: 2px solid #00c4fa;
     }
 }
