--- a/WebUI/src/assets/css/main.css
+++ b/WebUI/src/assets/css/main.css
@@ -83,13 +83,18 @@ textarea {
 .break-word {
   word-break: break-word;
 }
-.main-content {
+.main-content-container {
   border-color: #3a3a40;
   margin-top: -1px;
   background-color: var(--color-panel-focus);
+  overflow: hidden;
+}
+
+.main-content-area {
+  background-color: var(--color-panel-focus);
   display: flex;
   overflow-y: auto;
-  height: 0px;
+  height: 100%;
   > * {
     width: 100%;
   }
@@ -331,7 +336,7 @@ textarea {
   width: 420px;
   height: 100%;
   overflow: hidden;
-  z-index: 99;
+  flex-shrink: 0;
 
   .panel-tab {
     padding: 3px;
