fix: repair answer tab scrolling

--- a/WebUI/src/assets/css/main.css
+++ b/WebUI/src/assets/css/main.css
@@ -88,6 +88,7 @@ textarea {
   margin-top: -1px;
   background-color: var(--color-panel-focus);
   overflow: hidden;
+  height: 0;
 }
 
 .main-content-area {
