--- a/WebUI/src/assets/css/index.css
+++ b/WebUI/src/assets/css/index.css
@@ -6,6 +6,9 @@
 @import './pc.css';
 @import './compontents.css';
 @import './svg.css';
+@import 'tw-animate-css';
+
+@custom-variant dark (&:is(.dark *));
 
 @layer base {
   :root {
@@ -63,5 +66,26 @@
   }
   code {
     @apply break-words whitespace-pre-wrap;
+  }
+}
+
+@theme inline {
+  --animate-accordion-down: accordion-down 0.2s ease-out;
+  --animate-accordion-up: accordion-up 0.2s ease-out;
+  @keyframes accordion-down {
+    from {
+      height: 0;
+    }
+    to {
+      height: var(--reka-accordion-content-height);
+    }
+  }
+  @keyframes accordion-up {
+    from {
+      height: var(--reka-accordion-content-height);
+    }
+    to {
+      height: 0;
+    }
   }
 }
