--- a/WebUI/src/assets/css/main.css
+++ b/WebUI/src/assets/css/main.css
@@ -299,11 +299,11 @@ textarea {
   margin: 10px 0;
   border-radius: 6px;
   border: 1px solid var(--color-spilter);
-  background-color: var(--color-panel-focus);
   overflow: hidden;
-  position: absolute;
-  right: 16px;
-  top: 10px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   z-index: 30;
 }
 
