open dev tools button and icon

--- a/WebUI/src/assets/css/svg.css
+++ b/WebUI/src/assets/css/svg.css
@@ -21,6 +21,10 @@
   --svg: url('@/assets/svg/setup.svg');
 }
 
+.i-code {
+  --svg: url('@/assets/svg/code.svg');
+}
+
 .i-mini {
   --svg: url('@/assets/svg/mini.svg');
 }
